# Robotic-Assited_Pruning_of_Forest_Trees

./: .gitignore  Makefile
doc/: packages.md
hiwonder_jet_arm/: jet_arm_jetson_resources.txt
simulation/src/branch_detection/: package.xml  rosdep_extra.yaml
simulation/src/data_processing/: package.xml
simulation/src/manipulator/: package.xml
simulation/src/moveit/: .setup_assistant  package.xml
simulation/src/robot_cutter/: setup.cfg
src/branch_detection/: package.xml  setup.py
src/branch_detection/branch_detection/: node_detect_branch.py  node_detect_branch_by_color.py  service_compute_world_position.py
src/branch_detection/doc/: globals.md  node_detect_branch.md  (+2 more)
src/controller/: setup.py
src/custom_worlds/: CMakeLists.txt  package.xml
src/custom_worlds/meshes/dae/: Tree_Cylinders_Branch.dae  Tree_Cylinders_Trunk.dae
src/custom_worlds/models/tree_cylinders/: model.sdf
src/custom_worlds/worlds/: tree.world  tree_cylinders.world  tree_single_branch.world
src/data_processing/: CMakeLists.txt
src/image_processing/: CMakeLists.txt  package.xml
src/interfaces/: CMakeLists.txt  package.xml
src/manipulator/: CMakeLists.txt
src/moveit/: CMakeLists.txt
src/moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  ros2_controllers.yaml  ur.gazebo_control.xacro  ur.ros2_control.xacro  ur.srdf.xacro  ur.urdf.xacro
src/moveit/launch/: demo.launch.py  gz_moveit.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  warehouse_db.launch.py
src/moveit/src/: node_kinematic_controller.cpp  node_single_joint_controller.cpp
src/robot_cutter/: package.xml  setup.py
src/robot_description_cutter/: package.xml  setup.cfg  setup.py
src/ugv_sdk/: LICENSE
uf_xarm6/: .gitignore
uf_xarm6/ros_ws/: .gitignore  ReadMe.md  ReadMe_cn.md
uf_xarm6/test/: camera.py  color_mask.py  color_mask_depth.py  x_arm6_ik.py
(+180 files in other folders)
